made small changes, fixed z-indexes

--- a/style.css
+++ b/style.css
@@ -371,31 +371,37 @@ main {
 .offcanvas {
 }
 .slant {
-  /* margin-bottom: 300px; */
   width: 100%;
   height: 200px;
   background: linear-gradient(to bottom, maroon, var(--red));
   position: relative;
+  z-index: 2;
 }
 .slant-left {
-  border-top: 50px solid transparent;
+  border-top: 70px solid transparent;
   border-right: 100vw solid maroon;
   width: 100%;
-  height: 50px;
+  height: 70px;
   position: absolute;
   top: 0;
   transform: translateY(-100%);
 }
 .slant-right {
-  border-bottom: 50px solid transparent;
+  border-bottom: 70px solid transparent;
   border-left: 100vw solid var(--red);
   width: 100%;
-  height: 50px;
+  height: 70px;
   position: absolute;
   bottom: 0;
   transform: translateY(100%);
 }
 .parallax {
   height: 300px;
-  background: blue;
+  z-index: -1;
+}
+.parallax1 {
+  background: url(data-files/Calvin_Coolidge_Mrs._Coolidge_and_Senator_Curtis-1.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  filter: brightness(40%) sepia(100%) hue-rotate(180deg) saturate(300%);
 }
